# flask-testing

./: .env.example  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py  db.py  models.py  types.py
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  login_form.html  register.html
flaskr/templates/blog/: create.html  index.html  update.html
scripts/: typecheck.sh
tests/: __init__.py  conftest.py  factories.py  helpers.py  test_auth.py  test_blog.py  test_db.py  test_factory.py  test_models.py
