[tool.poetry]
name = "flask-testing"
version = "0.1.0"
description = "Project to test flask out"
authors = ["Felipe Lee <35938642+felipe-lee@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.31"
python-dotenv = "^0.19.2"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
mypy = "^0.931"
pre-commit = "^2.17.0"
factory-boy = "^3.2.1"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov -ra -q"
testpaths = [
    "tests"
]

[tool.coverage.run]
branch = true
source = [
    "flaskr"
]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
